--- a/assingment2/task1_MLP_MNIST.ipynb
+++ b/assingment2/task1_MLP_MNIST.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOPe9VkR/5EsQ3psDX7GD6s",
+      "authorship_tag": "ABX9TyNkheA0kzYlZKz5Wu3sCyUM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Implementing MLPs with Keras from [Ageron Notebook 10](https://github.com/ageron/handson-ml3/blob/main/10_neural_nets_with_keras.*ipynb*)"
+        "### Implementing MLPs with Keras from [Ageron Notebook 10](https://github.com/ageron/handson-ml3/blob/main/10_neural_nets_with_keras.ipynb)"
       ],
       "metadata": {
         "id": "iqkKM4_1cPXl"
@@ -509,13 +509,90 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### Define wrapper to run the above code and experiment with different (hyper)parameters"
+      ],
       "metadata": {
         "id": "9vmdgJUkfwZF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mlp(activation='relu', loss_function='sparse_categorical_crossentropy', optimizer='sgd',\n",
+        "        epochs=30):\n",
+        "  tf.random.set_seed(42)\n",
+        "  model = tf.keras.Sequential()\n",
+        "  model.add(tf.keras.layers.InputLayer(input_shape=[28, 28]))\n",
+        "  model.add(tf.keras.layers.Flatten())\n",
+        "  model.add(tf.keras.layers.Dense(300, activation=activation))\n",
+        "  model.add(tf.keras.layers.Dense(100, activation=activation))\n",
+        "  model.add(tf.keras.layers.Dense(10, activation=\"softmax\"))\n",
+        "\n",
+        "  model.summary()\n",
+        "\n",
+        "  model.compile(loss=loss_function,\n",
+        "              optimizer=optimizer,\n",
+        "              metrics=[\"accuracy\"])\n",
+        "  \n",
+        "  history = model.fit(X_train, y_train, epochs=epochs,\n",
+        "                    validation_data=(X_valid, y_valid))\n",
+        "  acc = history.history['accuracy'][-1]\n",
+        "  print('Accuracy = {:.2f} % after {:} epochs with optimizer = {:}'.format(acc*100, epochs, optimizer))\n",
+        "  return history, model\n",
+        "\n",
+        "mlp(epochs=2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sU7-RXlSokBa",
+        "outputId": "1cf03097-b14d-4d74-a15b-98025e140cba"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_4\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " flatten_4 (Flatten)         (None, 784)               0         \n",
+            "                                                                 \n",
+            " dense_110 (Dense)           (None, 300)               235500    \n",
+            "                                                                 \n",
+            " dense_111 (Dense)           (None, 100)               30100     \n",
+            "                                                                 \n",
+            " dense_112 (Dense)           (None, 10)                1010      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 266,610\n",
+            "Trainable params: 266,610\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "Epoch 1/2\n",
+            "1719/1719 [==============================] - 7s 4ms/step - loss: 1679664873472.0000 - accuracy: 0.0995 - val_loss: 2.3027 - val_accuracy: 0.0980\n",
+            "Epoch 2/2\n",
+            "1719/1719 [==============================] - 7s 4ms/step - loss: 2.3027 - accuracy: 0.0976 - val_loss: 2.3027 - val_accuracy: 0.0994\n",
+            "Accuracy = 0.09763636440038681 after 2 epochs with optimizer = sgd\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<keras.callbacks.History at 0x7f3999dc6810>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f399a19a7d0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     }
   ]
 }
